Adding swagger fix
